# patas-felizes-backend

./: .env.sample  .gitignore  CHANGELOG.md  Dockerfile  README.md  entrypoint.sh  pyproject.toml
.github/workflows/: deploy-to-google-cloud-run.yaml
backend/: __init__.py  config.py
backend/blueprints/: adocao.py  adotante.py  animal.py  apadrinhamento.py  auth.py  campanha.py  despesa.py  doacao.py  entity.py  estoque.py  home.py  hospedeiro.py  lar_temporario.py  procedimento.py  tarefa.py  voluntario.py
backend/services/: adocao_service.py  adotante_service.py  animal_service.py  apadrinhamento_service.py  campanha_service.py  despesa_service.py  doacao_service.py  entity_service.py  estoque_service.py  hospedeiro_service.py  lar_temporario_service.py  procedimento_service.py  tarefa_service.py  voluntario_service.py
backend/utils/: auth.py  decorators.py  logging.py  pagination.py  utils.py
certs/: certificate.crt  privatekey.key
migrations/versions/: 1bb1a1431ec2_removendo_quantidade_totalal_de_estoque.py  237fc9bc00c6_removendo_id_estoque_em_doação.py  2d9a7f1ba494_init.py  488077723664_atualizando_tipo_da_foto_do_animal.py  4f8fb977f3b6_adiciona_novos_modelos.py  5dff0c55cfdd_init.py  77e8e1eacf24_removendo_id_despesa_em_procedimento.py  7e1b296a40b9_init.py  88a5e96f3116_init.py  b72d72797061_removendo_id_procedimento_em_despesa.py  eba202ad481b_init.py  f04912df57df_adiciona_modelo_animal.py
tests/: conftest.py  test_entity.py
